Finished the implementation and the documentation
